--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "main": "index.ts",
   "scripts": {
     "compile": "npx tsc index.ts --outDir \"./tsout/\"",
-    "start": "npm run compile && node ./tsout/index.js",
-    "make":"npm run compile && pkg ./tsout/index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./tsout/index.js",
+    "compile-start": "npm run compile && node ./tsout/index.js",
+    "make": "npm run compile && pkg -t node18-win ./tsout/index.js"
   },
   "author": "jones joseph",
   "license": "ISC",
   "dependencies": {
+    "fs-extra": "^10.1.0",
     "minimist": "^1.2.6",
     "rxjs": "^7.5.6"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.6.4",
     "typescript": "^4.7.4"
